# Kamisado

./: CMakeLists.txt  README.md  start.sh
assets/images/pieces/: template-v1.pixil  template-v2.pixil
info/: rules.txt
src/: main.cpp
src/control/: board_controller.cpp  board_controller.h
src/control/match/: arbiter.cpp  arbiter.h  board_controller.cpp  board_controller.h  click_controller.cpp  click_controller.h  game_arbiter.cpp  game_arbiter.h
src/control/states/: game_state.h  state.h  state_machine.cpp  state_machine.h  test_match_scenery.cpp  test_match_scenery.h  title_screen_scenery.cpp  title_screen_scenery.h
src/model/match/: board.cpp  board.h  piece.cpp  piece.h
src/view/: arbiter_viewer.cpp  arbiter_viewer.h  asset_manager.h  board_viewer.cpp  board_viewer.h  piece_viewer.cpp  piece_viewer.h
src/view/match/: arbiter_viewer.cpp  arbiter_viewer.h  asset_manager.cpp  asset_manager.h  board_viewer.cpp  board_viewer.h  piece_viewer.cpp  piece_viewer.h  square_filler.cpp  square_filler.h
